[tool.poetry]
name = "superlists"
version = "0.1.0"
description = ""
authors = ["Dmitry Sankov <dmitry.sankov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.9.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
log2d = "^0.0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
